fixed hero image scaling issue

--- a/index.html
+++ b/index.html
@@ -90,8 +90,8 @@
             
 
             <!-- Image -->
-            <div class="flex justify-center md:w-1/2">
-                <img src="img/illustration-intro.svg" alt="" class="justify-self-center">
+            <div class="flex md:w-1/2">
+                <img src="img/illustration-intro.svg" alt="" class="justify-self-center object-contain">
             </div>
         </div>
     </section>
